--- a/src/index.css
+++ b/src/index.css
@@ -14,13 +14,24 @@ body {
 }
 .navMenu {
   background-image: linear-gradient(to right, #02015c, #020137);
-  /* background-image: linear-gradient(to bottom, #0d1117, #1c1f26); */
   color: white;
   padding: 1rem;
   display: grid;
   grid-template-columns: 0.5fr 1fr 0.5fr;
   justify-content: space-between;
   align-items: center;
+  z-index: 1;
+}
+.menuContainer {
+  text-align: left;
+  flex-direction: column;
+  line-height: 3em;
+  overflow-x: hidden;
+}
+.menuContainer li {
+  padding: 0.5rem 1rem;
+  cursor: pointer;
+  color: #02015c;
 }
 .menuBtn {
   background-image: linear-gradient(to bottom, #ffffff, #b1b1b3);
@@ -139,7 +150,7 @@ main {
   border: none;
 }
 .pollDiv {
-  cursor: pointer;
+  /* cursor: pointer; */
 }
 .partyDiv {
   display: grid;
@@ -148,14 +159,31 @@ main {
   gap: 10px;
 }
 .barDiv {
-  height: 100%;
+  height: 500px;
+  position: relative;
+  width: 40%;
 }
-.bar {
-  height: 600px;
+.barVal {
+  border-top-left-radius: 5px;
+  border-top-right-radius: 5px;
+  color: white;
+}
+.barMain {
+  position: absolute;
+  bottom: 0;
+  height: 0%;
+  border-radius: 5px;
+  transition: 2s ease-in-out height;
+}
+.barAnimate {
+  animation: grow 2s ease-in-out forwards;
+  position: absolute;
+  bottom: 0;
+  height: 0%;
   border-radius: 5px;
 }
-.bar:nth-child(odd) {
-  background-image: linear-gradient(to bottom, #00bc90, #5c0101);
+.barMain:nth-child(odd) {
+  background-image: linear-gradient(to bottom, #002403, #a07500, rgb(43, 4, 4));
 }
 
 
